Remove MySQL dependency and update Selenium version in pom.xml; comment out JUnit 4 dependency for Cucumber compatibility

--- a/LNF/pom.xml
+++ b/LNF/pom.xml
@@ -50,11 +50,6 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
 		<!-- This includes JUnit, Mockito, Hamcrest, and AssertJ for testing. -->
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -105,11 +100,33 @@
     </dependency>
 
     <!-- JUnit 4 (for Cucumber compatibility) -->
-    <dependency>
+    <!-- <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <scope>test</scope>
+    </dependency> -->
+
+	<!-- for selenium -->
+	 <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>4.24.0</version>
     </dependency>
+
+    <!-- JUnit 5 -->
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.10.2</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.10.2</version>
+        <scope>test</scope>
+    </dependency>
+
 </dependencies>
 
 
